syntax = "proto2";
package raft_serverpb;

import "raftpb.proto";
import "metapb.proto";

message RaftMessage {
    optional uint64 region_id         	     = 1;
    optional uint64 from_store_id  	         = 2;
    optional uint64 to_store_id     	     = 3;
    optional raftpb.Message message   	     = 4;
    optional metapb.RegionEpoch region_epoch = 5;
}

message RaftTruncatedState {
    optional uint64 index    = 1;
    optional uint64 term     = 2;
}

message KeyValue {
    optional bytes key      = 1;
    optional bytes value    = 2;
}

message RaftSnapshotData {
    optional metapb.Region region   = 1;
    repeated KeyValue data          = 2;
}

message StoreIdent {
    optional uint64 cluster_id   = 1;
    optional uint64 store_id     = 2;
}
