#![allow(dead_code)]

pub use raft_proto::eraftpb;

pub mod coprocessor {
    include!("prost/coprocessor.rs");
    include!("prost/wrapper_coprocessor.rs");
}
pub mod deadlockpb {
    include!("prost/deadlockpb.rs");
    include!("prost/wrapper_deadlockpb.rs");
}
pub mod debugpb {
    include!("prost/debugpb.rs");
    include!("prost/wrapper_debugpb.rs");
}
pub mod enginepb {
    include!("prost/enginepb.rs");
    include!("prost/wrapper_enginepb.rs");
}
pub mod errorpb {
    include!("prost/errorpb.rs");
    include!("prost/wrapper_errorpb.rs");
}
pub mod import_kvpb {
    include!("prost/import_kvpb.rs");
    include!("prost/wrapper_import_kvpb.rs");
}
pub mod import_sstpb {
    include!("prost/import_sstpb.rs");
    include!("prost/wrapper_import_sstpb.rs");
}
pub mod kvrpcpb {
    include!("prost/kvrpcpb.rs");
    include!("prost/wrapper_kvrpcpb.rs");
}
pub mod metapb {
    include!("prost/metapb.rs");
    include!("prost/wrapper_metapb.rs");
}
pub mod pdpb {
    include!("prost/pdpb.rs");
    include!("prost/wrapper_pdpb.rs");
}
pub mod raft_cmdpb {
    include!("prost/raft_cmdpb.rs");
    include!("prost/wrapper_raft_cmdpb.rs");
}
pub mod raft_serverpb {
    include!("prost/raft_serverpb.rs");
    include!("prost/wrapper_raft_serverpb.rs");
}
pub mod rustproto {
    include!("prost/rustproto.rs");
    include!("prost/wrapper_rustproto.rs");
}
pub mod tikvpb {
    include!("prost/tikvpb.rs");
    include!("prost/wrapper_tikvpb.rs");
}
